<resources>
    <string name="app_name">Wear Gesture</string>
    <string name="title_activity_app_select">Select Action</string>
    <string name="choose_action_below">Choose an Action below</string>
    <string name="intro_text">Thank you for installing! \n\nLets get started by connecting to your wearable!</string>
    <string name="get_started">Get Started!</string>
    <string name="intro_text2">Wearables are now connected!\n\nTo get you started, we\'ve also added a few gestures from the commonly used apps that you\'ve installed. \n\nEnjoy!</string>
    <string name="main_reload_confirm">This will reload the initial gestures based on what apps you have installed. All of your current gestures *will* be overwrote. Continue?</string>
    <string name="intro_connecting">Connecting... Please make sure this app is opened on your watch</string>
    <string name="intro_checkAPI">Checking wearable...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="waitSync">Please wait for wearable to sync and try again...</string>
    <string name="main_syncing">Syncing...</string>
    <string name="backup_restore_success">Gesture restored successfully</string>
    <string name="backup_backup_success">Backup success</string>
    <string name="sync_success">Successfully synced!</string>
    <string name="settings_sync">Sync</string>
    <string name="settings_settings">Settings</string>
    <string name="help">Help</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="rate_the_app">Rate the app</string>
    <string name="about">About</string>
    <string name="main_rate_message">This app is completely free, it is the best support to us if you could take a moment to rate it on Google Play Store!</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_no_thanks">No, thanks</string>
    <string name="action_sure">Sure!</string>
    <string name="main_not_sync">Gesture library not synced</string>
    <string name="dialog_title_delete">Delete gesture</string>
    <string name="dialog_delete_msg">Do you want to delete Gesture \'</string>
    <string name="main_howto">How to?</string>
    <string name="main_howto_msg">To add a gesture, tap the add button  \n\nTo delete a gesture, tap on it  \n\nTo find out more and help, tap the three dot menu at the top right corner</string>
    <string name="main_faildelete">Fail to delete, wearable no respond</string>
    <string name="action_launch_wearable_app">Launch Wearable App</string>
    <string name="action_timer_actions">Timer Actions</string>
    <string name="action_make_phone_calls">Make phone calls</string>
    <string name="action_launch_mobile_apps">Launch Mobile Apps</string>
    <string name="cancel">Cancel</string>
    <string name="choose_an_action">Choose an action to continue</string>
    <string name="delete">Delete</string>
    <string name="main_update_warning_title">Update warning</string>
    <string name="main_deleting">Deleting...</string>
    <string name="action_tasker">Tasker</string>
    <string name="backup_help">You can backup a copy of all the current gestures in your phone, so the changes after that won\'t affect this copy, even if you uninstall the wearable app. After backup, You can restore the copy to overwrite all current gestures.</string>
    <string name="backup_last_backup_details">Last backup details</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="close">Close</string>
    <string name="confirm_cofirm_notice">Confirm to add this gesture?</string>
    <string name="action">Action</string>
    <string name="confirm_collision_check">Collision check</string>
    <string name="redraw">Redraw</string>
    <string name="done">Done</string>
    <string name="gesture_notice">Please draw the new pattern that you would like to create</string>
    <string name="back">Back</string>
    <string name="settings_general">General</string>
    <string name="settings_show_quick_launcher">Show quick launcher</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_quick_launcher_style">Quick Launcher style</string>
    <string name="settings_long_press_disable">Long press disable</string>
    <string name="settings_shorter_length">Shorter length</string>
    <string name="settings_wider_width">Wider width</string>
    <string name="settings_quick_launcher_location">Quick Launcher Location</string>
    <string name="settings_right_edge">Right edge</string>
    <string name="settings_left_edge">Left edge</string>
    <string name="settings_top_edge">Top edge</string>
    <string name="settings_bottom_edge">Bottom edge</string>
    <string name="settings_recognition_accuracy">Gesture recognition accuracy</string>
    <string name="settings_recognition_accuracy_notice">Please only change this when there is a problem with recognition of your gestures</string>
    <string name="settings_low_accuracy">Low accuracy</string>
    <string name="settings_high_accuracy">High accuracy</string>
    <string name="settings_notice">Go back to main screen to save settings</string>
    <string name="action_tasker_not_installed">It looks like Tasker is not installed. With Tasker, you can control much more operations and connect with other apps. You can use this function once Tasker is installed!</string>
    <string name="action_tasker_access_block"><![CDATA[Access to Tasker is denied, please make sure you Enabled External Access from Tasker -> Preference -> Misc.]]></string>
    <string name="action_tasker_problem">There was a problem while connecting to Tasker: %s  \n\nIf this problem continue to occur, please try reinstall Wear Gesture Launcher on this device after installing Tasker, your gesture library will be saved on your wearable.</string>
    <string name="action_action_canceled">Action canceled</string>
    <string name="action_enter_name">Enter action name for calling number</string>
    <string name="app_select_all_item">You have created all items in this section!</string>
    <string name="confirm_gesture_save_fail">Gesture didn\'t save, wearable sync failed, please try again</string>
    <string name="confirm_must_choose">You must choose an action</string>
    <string name="confirm_collision_clear">Possible gesture collision: \nGreat! No similar gestures found</string>
    <string name="confirm_collision_similar">Possible gesture collision: \n%1$s - Similarity %2$d%%</string>
    <string name="timer_new_alarm">New Alarm</string>
    <string name="timer_manage_alarms">Manage Alarms</string>
    <string name="timer_open_timer">Open Timer</string>
    <string name="timer_open_stopwatch">Open Stopwatch</string>
    <string name="title_create_gesture">Create a Gesture</string>
    <string name="title_confirm_gesture">Confirm</string>
    <string name="title_choose_action">Choose an Action</string>
    <string name="title_help">Wear Gesture Launcher</string>
    <string name="backup_notice">You are going to overwrite an existing backup, with current gesture library containing %d gestures. Continue?</string>
    <string name="backup_restore_notice">You are going to overwrite all the current gestures, and restore the backup gesture library copy on %s. The wearable gesture library will also be overwrote. Continue?</string>
    <string name="backup_detail">Time: %1$s \nQuantity: %2$s</string>
    <string name="gesture_draw_notice">Please draw the gesture for action \'%s\'</string>
    <string name="receiver_notice">WGL Service Re-initiated, please send the action again.</string>
    <string name="main_join_testing">Join beta testing</string>
    <string name="email">Email</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_content">If you have any issues or suggestions, you can click the button to send an email for feedback. We will reply and adapt the change as soon as possible!</string>
    <string name="main_deleted">Item deleted</string>
    <string name="ignore">Ignore</string>
    <string name="ignored_notice">Ignored for this version</string>
    <string name="receiver_open_m_app">Opening %s ...</string>
    <string name="receiver_open_app_failed">There is no way to run %s :(</string>
    <string name="receiver_tasker_task">Running Tasker task %s ...</string>
    <string name="receiver_tasker_error">Tasker error:</string>
    <string name="receiver_connection_suspend">Connection suspended</string>
    <string name="settings_high_notice">High accuracy could cause gestures too hard to be recognized</string>
    <string name="settings_low_notice">Low accuracy could cause gestures too easy to be recognized</string>
    <string name="settings_zero_notice">Warning: This will skip the filtering, allow every best match gesture to be executed!!</string>
    <string name="settings_changes_saved">Changes saved</string>
    <string name="gesture_saved">Saved!</string>
    <string name="gesture_saving">Saving...</string>
    <string name="main_about_content">Thank you for using! \nIf you have any issues or suggestions, please email me at \nhenryzhang9802@gmail.com \n\nSpecial thanks to Thomas, Joerg Dietz and Natalia \n\nMobile version code: %1$d \nVersion name: %2$s \nWear version code: %3$d</string>
    <string name="main_version_content">Mobile app Version %1$d \nWear app Version %2$d \nVersion not consistent, please wait for play store auto-update or update manually to make sure sync running properly.</string>
    <string name="welcome_no_respond">Wearable no respond, please make sure the wearable app is installed and opened on your watch, and try again.</string>
    <string name="welcome_no_respond_t">No respond</string>
    <string name="welcome_b_install">Install now</string>
    <string name="welcome_connected">Connected!</string>
    <string name="welcome_go">Go!</string>
    <string name="welcome_fail_connect_button">Unable to connect?</string>
</resources>
