<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.format.gesturelauncher.ActionSelect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingBottom="5dp"

            android:paddingLeft="10dp"
            android:text="@string/choose_an_action" />




        <Button
            android:id="@+id/buttonApps"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/ic_watch_white_24dp"
            android:elevation="0dp"
            android:text="@string/action_launch_wearable_app"

            android:theme="@style/PrimaryButton" />

        <Button
            android:id="@+id/buttonAppMobile"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/ic_smartphone_white_24dp"
            android:elevation="0dp"
            android:enabled="true"
            android:text="@string/action_launch_mobile_apps"
            android:theme="@style/PrimaryButton"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonTimer"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/ic_timer_white_18dp"
            android:elevation="0dp"
            android:text="@string/action_timer_actions"

            android:theme="@style/PrimaryButton"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonToggles"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/ic_settings_applications_white_18dp"
            android:elevation="0dp"
            android:enabled="false"

            android:text="Toggle settings"
            android:theme="@style/PrimaryButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonPhone"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/ic_phone_white_18dp"
            android:elevation="0dp"


            android:text="@string/action_make_phone_calls"
            android:theme="@style/PrimaryButton"
            android:visibility="visible" />


        <Button
            android:id="@+id/buttonIntent"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/ic_smartphone_white_24dp"
            android:elevation="0dp"
            android:enabled="true"
            android:text="Shortcuts DEV"
            android:theme="@style/PrimaryButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonTasker"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableLeft="@drawable/ic_flash_on_white_24dp"
            android:elevation="0dp"
            android:enabled="true"
            android:text="Tasker"
            android:textColor="@color/cast_expanded_controller_text_color"
            android:theme="@style/PrimaryButtonTasker"
            android:visibility="visible" />

        <Button

            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/cancel"
            android:theme="@style/PrimaryFlatButton" /><!--style="?android:attr/buttonBarButtonStyle"-->


    </LinearLayout>

</RelativeLayout>
